# planpro-sumo-converter

./: .gitignore  MVP.ppxml  README.md  converter.py  pyproject.toml
converter/: __init__.py  converter.py  planprohelper.py  sumoexporter.py  sumohelper.py
converter/boilerplates/: sumoplainxml.py
converter/model/: __init__.py  point.py  runningtrack.py  track.py
examples/: MVP.ppxml  example.py
sumoexporter/: __init__.py  sumoexporter.py  sumohelper.py
sumoexporter/boilerplates/: sumoplainxml.py
sumoexporter/model/: point.py  route.py  signal.py  track.py
