[tool.poetry]
name = "sumoexporter"
version = "3.0"
description = "An exporter to a SUMO scenario from a yaramo model"
authors = ["Arne Boockmeyer <arne.boockmeyer@hpi.de>"]
readme = "README.md"
repository = "https://github.com/simulate-digital-rail/sumo-exporter"
packages = [{include = "sumoexporter"}]

[tool.poetry.dependencies]
python = "^3.11"
yaramo = {git = "https://github.com/simulate-digital-rail/yaramo", tag="v1.0"}

[tool.poetry.group.example]
optional = true

[tool.poetry.group.example.dependencies]
planpro_importer = {git = "https://github.com/simulate-digital-rail/planpro-importer", tag="v2.0"}
railway-route-generator = {git = "https://github.com/simulate-digital-rail/railway-route-generator", tag="v4.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
